fixed small layout issue in welcome screen if not updates are available

--- a/org.knime.product/intro/css/knime.css
+++ b/org.knime.product/intro/css/knime.css
@@ -90,7 +90,7 @@ body > h2 {
 	width:100%;
 }
 
-#update {
+#update-inner {
 	width: 100%;
 	box-sizing: border-box;
 	font-weight: bold;
